--- a/app/src/main/res/layout/fragment_new_event.xml
+++ b/app/src/main/res/layout/fragment_new_event.xml
@@ -35,7 +35,7 @@
             android:minHeight="48dp"
             android:onClick="CancelCreateEvent"
             android:text="@string/fa_times_circle_solid"
-            android:textColor="@color/Morado"
+            android:textColor="@color/MoradoText"
             android:textSize="25sp"
             app:solid_icon="true" />
 
@@ -62,7 +62,7 @@
                        android:layout_marginEnd="5dp"
                        android:fontFamily="@font/source_sans_pro_semibold"
                        android:text="Fecha"
-                       android:textColor="@color/Morado"
+                       android:textColor="@color/MoradoText"
                        android:textSize="20sp" />
 
                    <TextView
@@ -72,7 +72,7 @@
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/source_sans_pro_semibold"
                        android:text="Fecha"
-                       android:textColor="#3C3B3D"
+                       android:textColor="@color/MoradoText"
                        android:textSize="16sp" />
                </LinearLayout>
                <TextView
@@ -80,9 +80,10 @@
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
+                   android:layout_marginBottom="5dp"
                    android:fontFamily="@font/source_sans_pro_semibold"
                    android:text="Titulo"
-                   android:textColor="@color/Morado"
+                   android:textColor="@color/MoradoText"
                    android:textSize="19sp" />
 
                <EditText
@@ -103,7 +104,7 @@
                    android:layout_marginEnd="5dp"
                    android:fontFamily="@font/source_sans_pro_semibold"
                    android:text="Selecciona un color"
-                   android:textColor="@color/Morado"
+                   android:textColor="@color/MoradoText"
                    android:textSize="20sp" />
 
                 <LinearLayout
@@ -252,7 +253,7 @@
                        android:layout_marginEnd="5dp"
                        android:fontFamily="@font/source_sans_pro_semibold"
                        android:text="Hora"
-                       android:textColor="@color/Morado"
+                       android:textColor="@color/MoradoText"
                        android:textSize="20sp" />
 
                    <TextView
@@ -262,7 +263,7 @@
                        android:layout_marginTop="20dp"
                        android:text="Tiempo"
                        android:textSize="16sp"
-                       android:textColor="@color/Morado"/>
+                       android:textColor="@color/MoradoText"/>
                </LinearLayout>
            </LinearLayout>
 
