--- a/app/src/main/res/layout/fragment_new_group.xml
+++ b/app/src/main/res/layout/fragment_new_group.xml
@@ -35,7 +35,7 @@
             android:minHeight="48dp"
             android:onClick="CancelCreateGroup"
             android:text="@string/fa_times_circle_solid"
-            android:textColor="@color/Morado"
+            android:textColor="@color/MoradoText"
             android:textSize="25sp"
             app:solid_icon="true" />
 
@@ -56,9 +56,10 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
+                    android:layout_marginBottom="5dp"
                     android:fontFamily="@font/source_sans_pro_semibold"
                     android:text="Titulo"
-                    android:textColor="@color/Morado"
+                    android:textColor="@color/MoradoText"
                     android:textSize="19sp" />
 
                 <EditText
@@ -80,7 +81,7 @@
                     android:layout_marginEnd="5dp"
                     android:fontFamily="@font/source_sans_pro_semibold"
                     android:text="Selecciona un color"
-                    android:textColor="@color/Morado"
+                    android:textColor="@color/MoradoText"
                     android:textSize="20sp" />
 
                 <LinearLayout
