--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -85,11 +85,10 @@
                     <ImageView
                         android:id="@+id/IconImageWeather"
                         android:layout_width="130dp"
+                        android:paddingTop="5dp"
                         android:layout_height="110dp"
                         android:layout_marginStart="2dp"
-                        android:adjustViewBounds="true"
                         android:contentDescription="@string/app_name"
-                        android:scaleType="centerCrop"
                         tools:srcCompat="@tools:sample/avatars"
                         android:layout_weight="0.5"/>
 
